# xscopes-qt

./: .gitignore  .qmake.stash  CMakeLists.txt  README.md  XprotolabInterface.pro  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  bootloader.cpp  bootloader.h  bootloader.ui  colorDialogStyle.qss  complex.cpp  complex.h  customcolors.cpp  customcolors.h  customtheme.cpp  customtheme.h  customtheme.qss  customtheme.ui  fft.cpp  fft.h  filedownloader.cpp  filedownloader.h  libusb.h  libusbdevice.cpp  libusbdevice.h  libusbdeviceinfo.h  log.txt  mac-css.qss  mac-tab.qss  main.cpp  optionwindow.cpp  optionwindow.h  optionwindow.ui  qcustomplot.cpp  qcustomplot.h  qtooltipslider.cpp  qtooltipslider.h  serialportconnection.cpp  (+10 more)
Bitmaps/: gt.icns
debian/: README.Debian  README.source  changelog  control  copyright  docs  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  watch.ex  xscopes-qt.cron.d.ex  xscopes-qt.default.ex  xscopes-qt.doc-base.EX
extra/linux/: 64-xscope.rules
extserialport/: CMakeLists.txt
libs/mac/: libusb-1.0.0.dylib
libs/unix/: libusb-1.0.so.0.1.0
